--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <h1>KICL-KICL成績計算</h1>
+    <h1>KICL-成績計算</h1>
 
     <!-- 中間試験入力 -->
     <div class="grade-section">
